frontend/test/should_pass/exectype_InSetmapUntyped.grg
using exectype;

rule r
{
	modify  {
		exec({y in x});
	}
}