frontend/test/should_fail/exectype_AssignElemToVar.grg
using exectype;

rule r
{
	modify  {
		exec({x:A=@(lalala)}); // NamedGraph only available in GrShell, not at this level
	}
}